stylesheets/style2.css
body { 
    text-align:center;
    font-family: "helvetica";
    color:#222;
    font-size: 10pt;
    line-height:16pt;
}

li {
  text-align:left;
}


.wrapper{
  width:820px;
  margin-left: auto ;
  margin-right: auto ;
}

/* sidebar */

.sidebar {
  width:170px;
  float:right;
}

/* Section - for main page content */

section {
  width:650px;
  float:left;
}

